# KD_Crypto

./: .gitignore  CMakeLists.txt  Readme  Resources.qrc  logo.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Release/Linux/: KD_Crypto
help/: 软件使用说明.docx
include/: NanoLog.h  aes256.h  cryptocontrol.h  decryptocontrol.h  encryptocontrol.h  exceptions.h  kd_popdialog.h  kd_startlabel.h  picosha2.h
src/: NanoLog.cpp  aes256.cpp  cryptocontrol.cpp  decryptocontrol.cpp  encryptocontrol.cpp  kd_popdialog.cpp  kd_startlabel.cpp
